--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,12 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/app.js",
-    "dev": "nodemon --exec ts-node src/app.ts",
-    "build": "tsc",
+    "dev": "nodemon --exec ts-node-esm src/app.ts",
+    "build": "rm -rf dist && tsc",
     "lint": "eslint ."
   },
   "keywords": [],
