--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/app.js",
-    "dev": "nodemon --exec ts-node-esm src/app.ts",
+    "dev": "nodemon --exec tsx src/app.ts",
     "build": "rm -rf dist && tsc",
     "lint": "eslint ."
   },
@@ -31,6 +31,7 @@
     "eslint": "^9.39.2",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
