--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/app.js",
     "dev": "nodemon --exec tsx src/app.ts",
-    "build": "rm -rf dist && tsc",
+    "build": "tsup",
     "lint": "eslint ."
   },
   "keywords": [],
